Banker dashboard done (creo)

--- a/apps/bank/templates/bank.html
+++ b/apps/bank/templates/bank.html
@@ -17,7 +17,7 @@
 
         <!-- Account info -->
         <ul>
-            <li><strong>No. de bóveda:</strong> {{ account.id }}</li>
+            <li><strong>No. de bóveda:</strong> {{ account.pk }}</li>
             <li><strong>Saldo:</strong> {{ account.balance }} galeones</li>
 
             <li><strong>Estado de la cuenta:</strong>
