--- a/apps/users/templates/profile/profile.html
+++ b/apps/users/templates/profile/profile.html
@@ -18,7 +18,7 @@
 
             <!-- Account data -->
             <li>
-                <h4><strong>No. de bóveda:</strong> {{ account.id }}</h4>
+                <h4><strong>No. de bóveda:</strong> {{ account.pk }}</h4>
                 <p><strong>Saldo:</strong> {{ account.balance }} galeones</p>
                 <div>
                     <strong>Estado de la cuenta:</strong>
