--- a/apps/users/templates/login.html
+++ b/apps/users/templates/login.html
@@ -33,7 +33,7 @@
             </div>
         {% endif %}
         
-        <button type="submit">Entrar</button>
+        <button type="submit" class="btn btn-primary" >Entrar</button>
     </form>
     
     <p>¿Aún no tienes una cuenta en el Callejón Diagon?
