--- a/apps/users/templates/profile/edit_profile.html
+++ b/apps/users/templates/profile/edit_profile.html
@@ -35,7 +35,8 @@
             
             <button type="button" 
                 data-title="Edición de perfil"
-                data-message="¿Desea conservar los cambios?" 
+                data-message="¿Desea conservar los cambios?"
+                class="btn btn-primary" 
                 onclick="showConfirm(this)"> 
                 Guardar
             </button>
