--- a/apps/users/templates/profile/profile.html
+++ b/apps/users/templates/profile/profile.html
@@ -42,6 +42,8 @@
                     <p>Su cuenta expira el {{ account.premium_ex_date }}</p>
                     {% endif %}
                 </div>
+
+                <p>Transacciones restantes esta semana: {{ account.weekly_transactions_left }}</li>
             </li>
     </div>
 </main>
