--- a/apps/users/templates/profile/update_password.html
+++ b/apps/users/templates/profile/update_password.html
@@ -38,6 +38,7 @@
             <button type="button" 
                 data-title="Cambiar Llave"
                 data-message="¿Desea guardar la nueva Llave?" 
+                class="btn btn-primary" 
                 onclick="showConfirm(this)"> 
                 Guardar
             </button>
