--- a/apps/users/templates/register.html
+++ b/apps/users/templates/register.html
@@ -33,7 +33,7 @@
             </div>
         {% endif %}
 
-        <button type="submit">Registrarse</button>
+        <button type="submit" class="btn btn-primary" >Registrarse</button>
     </form>
     
     <p>¿Ya tienes una cuenta en el Callejón Diagon?
