--- a/apps/bank/templates/transactions.html
+++ b/apps/bank/templates/transactions.html
@@ -29,7 +29,7 @@
 
             <button type="button" class="btn btn-primary"
                     data-title="Confirmación de transferencia"
-                    data-message=""
+                    data-message="¿Deseas transferir galeones a esta cuenta?"
                     onclick="return prepareConfirm(this)">
                 Transferir
             </button>
