--- a/apps/bank/templates/pending_loans.html
+++ b/apps/bank/templates/pending_loans.html
@@ -12,7 +12,7 @@
 
     <!-- Pending loans -->
     <div>
-        {% if loans %}
+        {% if pending_loans %}
         <h3>Préstamos pendientes</h3>
         <table class="table">
             <tr>
@@ -21,7 +21,7 @@
                 <th></th>
             </tr>
 
-            {% for loan in loans %}
+            {% for loan in pending_loans %}
             <tr>
                 <td>{{ loan.amount_requested }}</td>
                 <td>{{ loan.amount_due }}</td>
