--- a/apps/bank/templates/bank.html
+++ b/apps/bank/templates/bank.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li>Para descongelar una cuenta deben comprar un artículo del Callejón Diagon.</li>
                     <li>Mientras la cuenta permanezca congelada se descontará el 5% de su saldo cada 3 días.</li>
-                    <li>Las cuentas congeladas con el balance en 0 solicitarán su descongelación al banco.</li>
+                    <li>Las cuentas congeladas 0 galeones solicitarán su descongelación al banco.</li>
                 </ul>
 
                 {% else %}
