--- a/apps/bank/templates/pending_loans.html
+++ b/apps/bank/templates/pending_loans.html
@@ -18,6 +18,7 @@
             <tr>
                 <th>Monto solicitado</th>
                 <th>Monto a devolver</th>
+                <th>Fecha de devolución</th>
                 <th></th>
             </tr>
 
@@ -25,6 +26,12 @@
             <tr>
                 <td>{{ loan.amount_requested }}</td>
                 <td>{{ loan.amount_due }}</td>
+                <td
+                    {% if loan.is_overdue %} style="color:red; font-weight:bold"
+                    {% elif loan.is_near_due %} style="color:orange; font-weight:bold"
+                    {% endif %}>
+                    {{ loan.due_date }}
+                </td>
                 <td>
                     <form method="post">
                         {% csrf_token %}
